Fix names of Airy functions.
[SVN r84476]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -432,9 +432,9 @@
               <div>
                 Added finding zeros of Bessel functions <code><span class="identifier">cyl_bessel_j_zero</span></code>,
                 <code><span class="identifier">cyl_neumann_zero</span></code>,
-                <code><span class="identifier">air_ai_zeros</span></code> and
-                <code><span class="identifier">air_bi_zeros</span></code>(by Christopher
-                Kormanyos).
+                <code><span class="identifier">airy_ai_zeros</span></code> and
+                <code><span class="identifier">airy_bi_zeros</span></code>(by
+                Christopher Kormanyos).
               </div>
             </li>
             <li>
