Add link to MPFI
[SVN r84477]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -493,7 +493,7 @@
             </li>
             <li>
               <div>
-                Add support for [mpfi].
+                Add support for <a href="http://perso.ens-lyon.fr/nathalie.revol/software.html">MPFI</a>.
               </div>
             </li>
             <li>
