--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -407,7 +407,7 @@
             <li>
               <div>
                 Major reorganization to incorporate other Boost.Math like Integer
-                Utilities LCD, GCM, quaternions and octonions. Making new chapter
+                Utilities LCM, GCD, quaternions and octonions. Making new chapter
                 headings.
               </div>
             </li>
