More release notes.
[SVN r84495]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -407,8 +407,8 @@
             <li>
               <div>
                 Major reorganization to incorporate other Boost.Math like Integer
-                Utilities LCM, GCD, quaternions and octonions. Making new chapter
-                headings.
+                Utilities (Greatest Common Divisor and Least Common Multiple), quaternions
+                and octonions. Making new chapter headings.
               </div>
             </li>
             <li>
@@ -727,6 +727,13 @@
                       <a href="http://svn.boost.org/trac/boost/ticket/8530">#8530</a>
                       [Coverity] Unused variable thread_handle, uninitialized variable
                       cond_mutex in thread/pthread/thread_data.hpp
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8596">#8596</a>
+                      With C++0x enabled, boost::packaged_task stores a reference
+                      to function objects, instead of a copy.
                     </div>
                   </li>
                 </ul>
