--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -778,6 +778,19 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/unordered/">Unordered</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Some very basic <code><span class="identifier">noexcept</span></code>
+                support.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/utility/">Utility</a>:</span>
           <ul>
             <li>
@@ -828,6 +841,18 @@
           </ul>
         </div>
       </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/wave/">Wave</a>:</span>
+          <ul>
+            <li>
+              <div>
+                See the <a href="/libs/wave/ChangeLog">Changelog</a> for details.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
     </ul>
   </div>
   <div id="version_1_54_0.compilers_tested">
@@ -838,7 +863,85 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          Linux:
+          <ul>
+            <li>
+              <div>
+                GCC: 4.4.7, 4.5.3, 4.6.2, 4.6.3, 4.7.3
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++98 mode: 4.7.3
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11 mode: 4.7.2, 4.7.3, 4.8.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang: 3.0, 3.1, 3.2
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++11 mode: 3.2
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          OS X:
+          <ul>
+            <li>
+              <div>
+                GCC: 4.2
+              </div>
+            </li>
+            <li>
+              <div>
+                Apple Clang: 4.2.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Apple Clang, C++11 mode: 4.2.1
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Windows:
+          <ul>
+            <li>
+              <div>
+                GCC, mingw: 4.4.0, 4.4.7, 4.5.4, 4.6.3, 4.7.2, 4.8.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual C++: 8.0, 9.0, 10.0, 11.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          FreeBSD:
+          <ul>
+            <li>
+              <div>
+                GCC: 4.2.1
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
@@ -848,7 +951,112 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          Linux:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.0, 3.1, 3.2, from Subversion
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, with libc++: 3.2
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.4.7, 4.5.3, 4.6.2, 4.6.3, 4.7.2, 4.7.3
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++98 mode: 4.7.3
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11 mode: 4.7.3, 4.8.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          OS X:
+          <ul>
+            <li>
+              <div>
+                Apple Clang: 4.2.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Apple Clang, C++11 mode: 4.2.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang: from Subversion
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++11 mode: from Subversion
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.2
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Windows:
+          <ul>
+            <li>
+              <div>
+                GCC, mingw: 4.4.0, 4.4.7, 4.5.4, 4.6.3, 4.7.2, 4.8.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual C++: 9.0, 10.0, 11.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual C++, Windows Mobile 5, with STLport: 9.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          AIX:
+          <ul>
+            <li>
+              <div>
+                IBM XL C/C++ Enterprise Edition: 12.1.0.1
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          FreeBSD:
+          <ul>
+            <li>
+              <div>
+                GCC: 4.2.1
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
@@ -856,7 +1064,9 @@
   <div id="version_1_54_0.acknowledgements">
     <h3><span class="link">Acknowledgements</span></h3>
     <p>
-      <em>TODO</em>
+      <a href="/users/people/beman_dawes.html">Beman Dawes</a>, Eric Niebler,
+      <a href="/users/people/rene_rivera.html">Rene Rivera</a>, Daniel James,
+      Vladimir Prus and Marshall Clow managed this release.
     </p>
   </div>
 </div>
