Iostreams and Graph release notes.
[SVN r84516]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -365,6 +365,157 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/iostreams/">Iostreams</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <code><span class="identifier">tee</span></code> now works correctly
+                for std::streams (<a href="https://svn.boost.org/trac/boost/ticket/8315">#8315</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Documentation fixes (<a href="https://svn.boost.org/trac/boost/ticket/8385">#8385</a>, <a href="https://svn.boost.org/trac/boost/ticket/8460">#8460</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Avoid warning from Clang's <code><span class="special">-</span><span class="identifier">Wimplicit</span><span class="special">-</span><span class="identifier">fallthrough</span></code> (<a href="https://svn.boost.org/trac/boost/ticket/8482">#8482</a>).
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/geometry/">Geometry</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <em>Additional functionality</em>
+                <ul>
+                  <li>
+                    <div>
+                      added Spatial Index, developed for Boost.Geometry by Adam Wulkiewicz.
+                      The spatial index was originally started by Federico J. Fernandez
+                      during the Google Summer of Code 2008 program, mentored by
+                      Hartmut Kaiser.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      added SVG-output, this was already in extensions for several
+                      years
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Documentation</em>
+                <ul>
+                  <li>
+                    <div>
+                      small fixes of missing words
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Bugfixes</em>
+                <ul>
+                  <li>
+                    <div>
+                      collinear opposite segments did sometimes (in circles) have
+                      a robustness issue, fixed
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      fixed insertion of false intersection point (found by buffer)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      applied patch of Vladimir Petrovic for debugging traversals
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Solved tickets</em>
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/7462">7462</a>
+                      degenerate union result for float, fixed
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/7465">7465</a>
+                      wrong construtors access type in scale_transformer class, fixed
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/7802">7802</a>
+                      cart_intersect.hpp unused parameter warnings, fixed
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/8254">8254</a>
+                      faulty intersection, fixed
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/8393">8393</a>
+                      polygon model doesn't adhere to stated Polygon concept rules,
+                      doc updated.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/8403">8403</a>
+                      silenced compiler warning C4127: conditional expression is
+                      constant
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/8405">8405</a>
+                      silenced compiler warning C4189: '...' : local variable is
+                      initialized but not referenced
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Internal changes</em>
+                <ul>
+                  <li>
+                    <div>
+                      Made several algorithms variant-aware (append, area, clear,
+                      convert, equals, length, num_points)
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/conversion/lexical_cast.htm">Lexical cast</a>:</span>
           <ul>
             <li>
@@ -540,6 +691,23 @@
                 Fixed bug in some transcendental functions that caused incorrect
                 return values when variables are reused, for example with <code><span class="identifier">a</span> <span class="special">=</span> <span class="identifier">pow</span><span class="special">(</span><span class="identifier">a</span><span class="special">,</span> <span class="identifier">b</span><span class="special">)</span></code>.
                 See <a href="https://svn.boost.org/trac/boost/ticket/8326">8326</a>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/polygon/">Polygon</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Updates and fixes to the Voronoi documentation.
+              </div>
+            </li>
+            <li>
+              <div>
+                Bugs fixed from Trac: <a href="https://svn.boost.org/trac/boost/ticket/8026">#8026</a>, <a href="https://svn.boost.org/trac/boost/ticket/8197">#8197</a>, <a href="https://svn.boost.org/trac/boost/ticket/8257">#8257</a>.
               </div>
             </li>
           </ul>
