Tidy up release notes + rebuild.
[SVN r84534]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -151,6 +151,23 @@
     <ul>
       <li>
         <div>
+          <span class="library"><a href="/libs/accumulators/">Accumulators</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixes comment typos (<a href="http://svn.boost.org/trac/boost/ticket/7917">#7917</a>)
+              </div>
+            </li>
+            <li>
+              <div>
+                Silence unused variable warnings (<a href="http://svn.boost.org/trac/boost/ticket/6926">#6926</a>)
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/algorithm/">Algorithm</a>:</span>
           <ul>
             <li>
@@ -328,66 +345,6 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/graph">Graph</a>:</span>
-          <ul>
-            <li>
-              <div>
-                Bugs fixed from Trac: <a href="https://svn.boost.org/trac/boost/ticket/6780">#6780</a>, <a href="https://svn.boost.org/trac/boost/ticket/7016">#7016</a>, <a href="https://svn.boost.org/trac/boost/ticket/7155">#7155</a>, <a href="https://svn.boost.org/trac/boost/ticket/7845">#7845</a>,
-                <a href="https://svn.boost.org/trac/boost/ticket/7863">#7863</a>, <a href="https://svn.boost.org/trac/boost/ticket/7877">#7877</a>, <a href="https://svn.boost.org/trac/boost/ticket/8166">#8166</a>, <a href="https://svn.boost.org/trac/boost/ticket/8192">#8192</a>, <a href="https://svn.boost.org/trac/boost/ticket/8398">#8398</a>, <a href="https://svn.boost.org/trac/boost/ticket/8411">#8411</a>,
-                <a href="https://svn.boost.org/trac/boost/ticket/8427">#8427</a>, <a href="https://svn.boost.org/trac/boost/ticket/8428">#8428</a>, <a href="https://svn.boost.org/trac/boost/ticket/8434">#8434</a>, <a href="https://svn.boost.org/trac/boost/ticket/8490">#8490</a>.
-              </div>
-            </li>
-            <li>
-              <div>
-                Added updates to VF2 subgraph isomorphism from Jakob Lykke Andersen
-                and Flavio De Lorenzi.
-              </div>
-            </li>
-            <li>
-              <div>
-                Added maximum adjacency search from Fernando Vilas.
-              </div>
-            </li>
-            <li>
-              <div>
-                Added timeout support from Brammert Ottens to resource-constrained
-                shortest paths (r_c_shortest_paths) algorithm.
-              </div>
-            </li>
-            <li>
-              <div>
-                Various fixes to documentation and examples and removal of outdated
-                compiler workarounds.
-              </div>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li>
-        <div>
-          <span class="library"><a href="/libs/iostreams/">Iostreams</a>:</span>
-          <ul>
-            <li>
-              <div>
-                <code><span class="identifier">tee</span></code> now works correctly
-                for std::streams (<a href="https://svn.boost.org/trac/boost/ticket/8315">#8315</a>).
-              </div>
-            </li>
-            <li>
-              <div>
-                Documentation fixes (<a href="https://svn.boost.org/trac/boost/ticket/8385">#8385</a>, <a href="https://svn.boost.org/trac/boost/ticket/8460">#8460</a>).
-              </div>
-            </li>
-            <li>
-              <div>
-                Avoid warning from Clang's <code><span class="special">-</span><span class="identifier">Wimplicit</span><span class="special">-</span><span class="identifier">fallthrough</span></code> (<a href="https://svn.boost.org/trac/boost/ticket/8482">#8482</a>).
-              </div>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li>
-        <div>
           <span class="library"><a href="/libs/geometry/">Geometry</a>:</span>
           <ul>
             <li>
@@ -509,6 +466,66 @@
                     </div>
                   </li>
                 </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/graph">Graph</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Bugs fixed from Trac: <a href="https://svn.boost.org/trac/boost/ticket/6780">#6780</a>, <a href="https://svn.boost.org/trac/boost/ticket/7016">#7016</a>, <a href="https://svn.boost.org/trac/boost/ticket/7155">#7155</a>, <a href="https://svn.boost.org/trac/boost/ticket/7845">#7845</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/7863">#7863</a>, <a href="https://svn.boost.org/trac/boost/ticket/7877">#7877</a>, <a href="https://svn.boost.org/trac/boost/ticket/8166">#8166</a>, <a href="https://svn.boost.org/trac/boost/ticket/8192">#8192</a>, <a href="https://svn.boost.org/trac/boost/ticket/8398">#8398</a>, <a href="https://svn.boost.org/trac/boost/ticket/8411">#8411</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/8427">#8427</a>, <a href="https://svn.boost.org/trac/boost/ticket/8428">#8428</a>, <a href="https://svn.boost.org/trac/boost/ticket/8434">#8434</a>, <a href="https://svn.boost.org/trac/boost/ticket/8490">#8490</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added updates to VF2 subgraph isomorphism from Jakob Lykke Andersen
+                and Flavio De Lorenzi.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added maximum adjacency search from Fernando Vilas.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added timeout support from Brammert Ottens to resource-constrained
+                shortest paths (r_c_shortest_paths) algorithm.
+              </div>
+            </li>
+            <li>
+              <div>
+                Various fixes to documentation and examples and removal of outdated
+                compiler workarounds.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/iostreams/">Iostreams</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <code><span class="identifier">tee</span></code> now works correctly
+                for std::streams (<a href="https://svn.boost.org/trac/boost/ticket/8315">#8315</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Documentation fixes (<a href="https://svn.boost.org/trac/boost/ticket/8385">#8385</a>, <a href="https://svn.boost.org/trac/boost/ticket/8460">#8460</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Avoid warning from Clang's <code><span class="special">-</span><span class="identifier">Wimplicit</span><span class="special">-</span><span class="identifier">fallthrough</span></code> (<a href="https://svn.boost.org/trac/boost/ticket/8482">#8482</a>).
               </div>
             </li>
           </ul>
@@ -969,6 +986,12 @@
             </li>
             <li>
               <div>
+                Fix <code><span class="identifier">string_ref</span></code>'s
+                logical operators.
+              </div>
+            </li>
+            <li>
+              <div>
                 Update noncopyable for C++11 (<a href="https://svn.boost.org/trac/boost/ticket/6578">#6578</a>).
               </div>
             </li>
@@ -981,6 +1004,11 @@
               <div>
                 Fix using <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">addressof</span></code> with <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">function</span></code>
                 on SolarisStudio compiler (<a href="https://svn.boost.org/trac/boost/ticket/7079">#7079</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Disable annoying MSVC warning about operator comma (<a href="https://svn.boost.org/trac/boost/ticket/7663">#7663</a>)
               </div>
             </li>
           </ul>
@@ -1016,6 +1044,29 @@
             <li>
               <div>
                 See the <a href="/libs/wave/ChangeLog">Changelog</a> for details.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          [prase library..<a href="/libs/xpressive">xpressive</a>:]
+          <ul>
+            <li>
+              <div>
+                Remove unused variables, fixes <a href="https://svn.boost.org/trac/boost/ticket/8039">#8039</a>
+              </div>
+            </li>
+            <li>
+              <div>
+                Avoid name clash with macro <code><span class="identifier">None</span></code>
+                in glx.h, fixes <a href="https://svn.boost.org/trac/boost/ticket/8204">#8204</a>
+              </div>
+            </li>
+            <li>
+              <div>
+                Silence a gcc warning, fixes <a href="https://svn.boost.org/trac/boost/ticket/8138">#8138</a>
               </div>
             </li>
           </ul>
