--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -40,20 +40,21 @@
               "news-title">Version 1.54.0 - work in progress</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
-
+              <p><a href="/doc/libs/1_54_0_beta1/">Documentation</a>
 
               <div class="news-description">
                 <div class="description">
+
 
 
   <div id="version_1_54_0.news">
     <h3><span class="link">News</span></h3>
     <p>
       Boost no longer supports the 80386 target CPU, the minimum x86 32-bit target
-      is i486. The 80386 target was not properly supported by <a href="/libs/smart_ptr/">Boost.SmartPtr</a>
-      and <a href="/libs/atomic/">Boost.Atomic</a> (as well as the libraries
+      is i486. The 80386 target was not properly supported by <a href="/doc/libs/1_54_0_beta1/libs/smart_ptr/">Boost.SmartPtr</a>
+      and <a href="/doc/libs/1_54_0_beta1/libs/atomic/">Boost.Atomic</a> (as well as the libraries
       that used them internally) even before this release. Some Boost libraries may
-      have higher requirements on the minimum target CPU (like <a href="/libs/log/">Boost.Log</a>
+      have higher requirements on the minimum target CPU (like <a href="/doc/libs/1_54_0_beta1/libs/log/">Boost.Log</a>
       for example), see the respective library documentation for details.
     </p>
     <p>
@@ -125,21 +126,21 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/libs/log/">Log</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/log/">Log</a>:</span>
   Logging library, from Andrey
           Semashev.
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/tti/">TTI</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/tti/">TTI</a>:</span>
   Type Traits Introspection library,
           from Edward Diener.
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/type_erasure/">Type Erasure</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/type_erasure/">Type Erasure</a>:</span>
   Runtime polymorphism
           based on concepts.
         </div>
@@ -151,7 +152,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/libs/accumulators/">Accumulators</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/accumulators/">Accumulators</a>:</span>
           <ul>
             <li>
               <div>
@@ -168,7 +169,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/algorithm/">Algorithm</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/algorithm/">Algorithm</a>:</span>
           <ul>
             <li>
               <div>
@@ -191,7 +192,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/any/">Any</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/any/">Any</a>:</span>
           <ul>
             <li>
               <div>
@@ -216,7 +217,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/asio/">Asio</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/asio/">Asio</a>:</span>
           <ul>
             <li>
               <div>
@@ -404,7 +405,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/chrono/">Chrono</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/chrono/">Chrono</a>:</span>
           <ul>
             <li>
               <div>
@@ -449,7 +450,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/circular_buffer">Circular Buffer</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/circular_buffer">Circular Buffer</a>:</span>
           <ul>
             <li>
               <div>
@@ -461,7 +462,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -473,7 +474,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/coroutine/">Coroutine</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/coroutine/">Coroutine</a>:</span>
           <ul>
             <li>
               <div>
@@ -533,7 +534,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/geometry/">Geometry</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/geometry/">Geometry</a>:</span>
           <ul>
             <li>
               <div>
@@ -661,7 +662,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/graph">Graph</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/graph">Graph</a>:</span>
           <ul>
             <li>
               <div>
@@ -698,7 +699,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/iostreams/">Iostreams</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/iostreams/">Iostreams</a>:</span>
           <ul>
             <li>
               <div>
@@ -721,7 +722,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/conversion/lexical_cast.htm">Lexical cast</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/conversion/lexical_cast.htm">Lexical cast</a>:</span>
           <ul>
             <li>
               <div>
@@ -758,7 +759,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/math/">Math</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/math/">Math</a>:</span>
           <ul>
             <li>
               <div>
@@ -840,7 +841,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/multiprecision/">Multiprecision</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/multiprecision/">Multiprecision</a>:</span>
           <ul>
             <li>
               <div>
@@ -903,7 +904,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/polygon/">Polygon</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/polygon/">Polygon</a>:</span>
           <ul>
             <li>
               <div>
@@ -920,7 +921,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/property_map/">PropertyMap</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/property_map/">PropertyMap</a>:</span>
           <ul>
             <li>
               <div>
@@ -933,7 +934,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/thread/">Thread</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/thread/">Thread</a>:</span>
           <ul>
             <li>
               <div>
@@ -1117,7 +1118,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/type_traits/">Type Traits</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/type_traits/">Type Traits</a>:</span>
           <ul>
             <li>
               <div>
@@ -1151,7 +1152,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/unordered/">Unordered</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/unordered/">Unordered</a>:</span>
           <ul>
             <li>
               <div>
@@ -1164,7 +1165,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/utility/">Utility</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/utility/">Utility</a>:</span>
           <ul>
             <li>
               <div>
@@ -1204,7 +1205,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/variant/">Variant</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/variant/">Variant</a>:</span>
           <ul>
             <li>
               <div>
@@ -1227,11 +1228,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/wave/">Wave</a>:</span>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/wave/">Wave</a>:</span>
           <ul>
             <li>
               <div>
-                See the <a href="/libs/wave/ChangeLog">Changelog</a> for details.
+                See the <a href="/doc/libs/1_54_0_beta1/libs/wave/ChangeLog">Changelog</a> for details.
               </div>
             </li>
           </ul>
@@ -1239,7 +1240,7 @@
       </li>
       <li>
         <div>
-          [prase library..<a href="/libs/xpressive">xpressive</a>:]
+          [prase library..<a href="/doc/libs/1_54_0_beta1/libs/xpressive">xpressive</a>:]
           <ul>
             <li>
               <div>
