Fix quickbook markup error.
[SVN r84581]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -1240,7 +1240,7 @@
       </li>
       <li>
         <div>
-          [prase library..<a href="/doc/libs/1_54_0_beta1/libs/xpressive">xpressive</a>:]
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/xpressive">xpressive</a>:</span>
           <ul>
             <li>
               <div>
