--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -1152,6 +1152,34 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/numeric/ublas">uBLAS</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <a href="https://svn.boost.org/trac/boost/ticket/6511">#6511</a> Division by scalar should use <code><span class="identifier">enable_if</span><span class="special">&lt;&gt;</span></code>
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="https://svn.boost.org/trac/boost/ticket/7297">#7297</a> Make the free functions 'num_columns' and 'num_rows' support
+                the uBLAS traits system and better work with expression types
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="https://svn.boost.org/trac/boost/ticket/6010">#6010</a> fixed linkage problems in assignment.hpp
+              </div>
+            </li>
+            <li>
+              <div>
+                updated doc
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/unordered/">Unordered</a>:</span>
           <ul>
             <li>
