Add beta release to site.
Also slight change to syntax highlighting because I'm now using quickbook 1.5.9
which highlights C++11 keywords.


[SVN r84634]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.54.0 - work in progress</title>
+  <title>Version 1.54.0 beta</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -37,11 +37,11 @@
             <div class="section-note"><p>Note: This version is at an early stage in its release cycle. The information listed below is incomplete and some of the documentation links may not work yet.</p></div>
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.54.0 - work in progress</span></h2>
+              "news-title">Version 1.54.0 beta</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
               <p><a href="/doc/libs/1_54_0_beta1/">Documentation</a>
-
+              <p><span class="news-download"><a href="http://sourceforge.net/projects/boost/files/boost/1.54.0.beta.1/">Download this beta release.</a></span></p>
               <div class="news-description">
                 <div class="description">
 
@@ -205,7 +205,7 @@
                   </li>
                   <li>
                     <div>
-                      Added <code><span class="identifier">noexcept</span></code>
+                      Added <code><span class="keyword">noexcept</span></code>
                       modifiers.
                     </div>
                   </li>
@@ -867,7 +867,7 @@
             </li>
             <li>
               <div>
-                Add support for user-defined literals in cpp_int, improve <code><span class="identifier">constexpr</span></code> support.
+                Add support for user-defined literals in cpp_int, improve <code><span class="keyword">constexpr</span></code> support.
               </div>
             </li>
             <li>
@@ -1156,7 +1156,7 @@
           <ul>
             <li>
               <div>
-                Some very basic <code><span class="identifier">noexcept</span></code>
+                Some very basic <code><span class="keyword">noexcept</span></code>
                 support.
               </div>
             </li>
@@ -1209,7 +1209,7 @@
           <ul>
             <li>
               <div>
-                Now uses new type traits from Boost.TypeTrait to detect <code><span class="identifier">noexcept</span></code> constructors and assignment
+                Now uses new type traits from Boost.TypeTrait to detect <code><span class="keyword">noexcept</span></code> constructors and assignment
                 operators <a href="https://svn.boost.org/trac/boost/ticket/8296">#8296</a>. This shall increase performance of <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">variant</span></code> for many types in C++11.
               </div>
             </li>
